# AptuWhiz

./: .gitignore  README.md  main.py
MapsTest/: contours.txt  main.py  mainPrev.py  print_contours.py  showTools.py  snippets.py
MapsTest/back/: TODO.txt
PolygonDetector/: contours.txt  dcel.cpp  dcel.cpp.orig  dcel.h  geom_algorithms.cpp  geom_algorithms.h  io.h  main.cpp  newfile  point_type.h  polygon_type.h  segment_type.h  types.h
PolygonDetector/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
PolygonTest/: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  PolygonMatcher  PolygonMather  README  cmake_install.cmake
PolygonTest/headers/: algorithms.h  app_viewer.h  drawer.h  geom_algorithms.h  polygon_matching.h  stdafx.h
PolygonTest/src/: algorithms.cpp  app_viewer.cpp  geom_algorithms.cpp  main.cpp
PolygonTest/tests/: t1.txt  t2.txt  t3.txt  t4.txt  t_arrow.txt  t_crash1.txt  t_fish.txt  t_heart.txt  t_heart2.txt  t_heartMany.txt  t_simple.txt  t_simple2.txt  t_simple3.txt  tests.cpp
PolygonTest/visualization/: geom-visualization.pro
psd/: onePolygon.xcf
